# django-vi-address

./: MANIFEST.in  README.rst  setup.cfg  setup.py
django_vi_address.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vi_address/data/xa-phuong/: 088.json
vi_address/management/commands/: insert_data.py
